# boson_hackathon

./: .gitignore  PROJECT_SPEC.md  README.md  env.example  experiment_config.json  pyproject.toml  requirements.txt
app/: Makefile  app.py  requirements_api.txt  streamlit_app.py  voice_lock.db
app-legacy/: audio_utils.py  boson_api_tester.py
app-legacy/examples/: multi_voice_comparison.py  voice_cloning_demo.py
app/backend/: README.md  __init__.py  app.py  requirements.txt
app/backend/core/: __init__.py  services.py
app/backend/database/: __init__.py  database.py
app/backend/models/: __init__.py  schemas.py
app/backend/routes/: __init__.py  auth_routes.py  profile_routes.py  security_routes.py  voice_routes.py
app/backend/security/: __init__.py  auth.py  security_manager.py
app/examples/: basic_voice_generation.py  multi_voice_comparison.py  voice_cloning_demo.py
app/pretrained_models/EncoderClassifier-8f6f7fdaa9628acf73e21ad1f99d5f83/: hyperparams.yaml
app_legacy/: Makefile  __init__.py  app.py
experiments/: Makefile  higgs_prompt_eval.csv
experiments/automated_prompt_experiment/: README.md  __init__.py  batch_prompt_eval.py  experiment_config.json  generate_prompt_texts.py  higgs_eval.py  run_experiments.py
experiments/automated_prompt_experiment/instruction/: cursor_task_en.md
experiments/automated_prompt_experiment/prompts/: _manifest.txt  text_000.txt  text_002.txt  text_005.txt  text_006.txt  text_007.txt  text_009.txt  text_010.txt  text_011.txt  text_014.txt  text_015.txt  text_016.txt  text_019.txt  text_020.txt  text_023.txt  text_024.txt  text_026.txt  text_028.txt  text_032.txt  text_033.txt  text_037.txt  text_040.txt  text_041.txt  text_042.txt  text_045.txt  text_048.txt  text_049.txt  text_050.txt  text_051.txt  text_052.txt  text_053.txt  text_054.txt  text_055.txt  text_057.txt  text_058.txt  text_059.txt  text_061.txt  text_062.txt  text_064.txt  text_066.txt  (+21 more)
experiments/automated_prompt_experiment/results/prompt_sweep/: results.csv
experiments/decoding_grid_experiment/: analyze_decoding_results.py  run_decoding_grid.py
experiments/full_eval/: data_prep.py  metrics.py  pairing.py  run_full_experiment.py  summarize_results.py
experiments/prompt_sweep/: results.csv
experiments/results/: final_report.md  prompt_leaderboard_top5_per_speaker.csv  recommended_settings.json
experiments/results/automated_prompt_generation/: metrics_summary.json  prompt_leaderboard.csv  prompt_leaderboard_top10_per_speaker.csv  results.csv
experiments/results/decoding_grid/: final_report.md  grid_results.csv
playground/: __init__.py  app.py  voice_generator.py
playground/examples/: basic_voice_generation.py  multi_voice_comparison.py  voice_cloning_demo.py
scripts/: batch_prompt_eval.py  run_experiments.py
src/: __init__.py  attack_strategies.py  common_voice_baseline.py  embedding_scorer.py  librispeech_baseline.py  voice_analyzer.py  voice_generator.py  wavlm_scorer.py
src/clone-audio/text_000/: baseline_results.json
src/core/: __init__.py  common_voice_baseline.py  voice_analyzer.py  voice_impersonator.py
src/core/instruction/: cursor_task_en.md  experiment_plan_zh.md
tools/: generate_prompt_texts.py
